--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Treztech Trivia</title>
     <link rel="stylesheet" href="./assets/styles/styles.css" />
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="https://img.icons8.com/ios-glyphs/30/000000/puzzle.png" type="image/x-icon">
   </head>
   <body>
     <main class="quizArea">
